cargo-features = ["resolver"]
[package]
name = "getter"
version = "0.1.0"
authors = ["lucky <takuto.yoshikai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = "0.11.0"
tokio = { version = "1.8.0", features = ["full"] }
http = "0.2.3"
rsa = "0.4.0"
base64 = "0.13.0"
rand = "0.8.4"
ureq = "2.1.1"
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
